# q565viewer

./: CMakeLists.txt  LICENSE  Main.qml  README.md  main.cpp  q565transcoder.cpp  q565transcoder.h
images/aio-unchained-py/: Christopher Dean ID.q565  testcard_rgba_py.q565  testing_py.q565
images/q565-rust/: GM-Pontiac-Solstice_rust.q565  testcard_rgb_rust.q565  testing_h_rust.q565  testing_rust.q565  testing_v_rust.q565
images/q565py/: GM-Pontiac-Solstice_py.q565  testing_h_py.q565  testing_v_py.q565
q565-io-plugin/: CMakeLists.txt  q565.h  q565imageformat.json  q565imageformatplugin.cpp  q565imageformatplugin.hpp  q565imageiohandler.cpp  q565imageiohandler.hpp
rust/qt_rust_q565/: Cargo.toml  build.rs
rust/qt_rust_q565/src/: lib.rs  qt_rust_q565.rs
tests/: CMakeLists.txt  CorruptImageViewer.qml  q565benchmarking.cpp  q565tests.h
