[package]
name = "qt_rust_q565"
version = "0.1.0"
authors = [
    "Christopher Dean <cdean@productiveresources.com>"
]
edition = "2021"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["staticlib"]

[dependencies]
cxx = "1.0.95"
cxx-qt = "0.7"
cxx-qt-lib = { version="0.7.2", features = [ "qt_gui" ] }
q565 = { version="0.4.0" }

[build-dependencies]
cxx-qt-build = { version="0.7", features = [ "link_qt_object_files" ] }
